Correção do google authentication pelo firebase, adicionado bootstrap e alguns ajustes

--- a/Todo/ToDo.FrontEnd.Angular/src/app/pages/new/new.component.html
+++ b/Todo/ToDo.FrontEnd.Angular/src/app/pages/new/new.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="form">
+	<input type="hidden" formControlName="user" />
 	<h1>Nova tarefa</h1>
 	<br>
 	<textarea cols="30" rows="2" placeholder="ex: Recarregar meu telefone" formControlName="title"></textarea>
